Fix vertical overflow behaviour

--- a/src/Tech2023.Web/wwwroot/css/index.css
+++ b/src/Tech2023.Web/wwwroot/css/index.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --navbar-height: 5rem;
+}
+
 @layer base {
   h1 {
     @apply text-3xl py-2;
@@ -28,5 +32,10 @@
 @layer components {
   .bg-gradient-button {
     @apply bg-gradient-to-br from-primary to-indigo-800;
+  }
+
+  /* Layout CSS */
+  #navbar {
+    height: var(--navbar-height);
   }
 }
